--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
 
     <body bgcolor="#525252">
 
-        <div id="wrapper"></div>
         <hr>
         <h1><font color = "FFFFFF"><b>Luxueux penthouse à louer</b></h1>
 
-        <img border="1" src="1.jpeg" align="top"> 
-        <img border="1" src="2.jpeg" align="top">
-        <img border="1" src="3.jpeg" align="top">
-        <img border="1" src="4.jpeg" align = "top">
-        <img border="1" src="5.jpeg" align = "top">
+         <div style="width:100%">
+            <img border="1" src="1.jpeg" align="top"> 
+            <img border="1" src="2.jpeg" align="top">
+            <img border="1" src="3.jpeg" align="top">
+            <img border="1" src="4.jpeg" align = "top">
+            <img border="1" src="5.jpeg" align = "top">
+            <img border="1" src="6.jpeg" align = "top">
+        </div>
+     
 
 
         <h2>
@@ -54,10 +57,11 @@
             </p>
         </h3>
 
-        <img border="1" src="7.jpeg" align = "center">       
-        <img border="1" src="8.jpeg" align = "center">   
-        <img border="1" src="9.jpeg" align = "center">      
-
+        <div style="width:100%">
+         <img border="1" src="7.jpeg" align = "center">       
+         <img border="1" src="8.jpeg" align = "center">   
+         <img border="1" src="9.jpeg" align = "center">  
+        </div>    
 
 
         <hr>
